feat(farm): delete chicken
 - new farm is created with a barn and a chicken
